# sigma_compare

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ubuntu_address_sanitizer.yml  ubuntu_release.yml
resources/test/exr/: AllHalfValues.B44.exr  AllHalfValues.DWAA_10.exr  AllHalfValues.DWAA_45.exr  AllHalfValues.DWAA_99.exr  AllHalfValues.NONE.exr  AllHalfValues.PIZ.exr  AllHalfValues.ZIP.exr  StillLife_crop.DWA45.0000001.exr  StillLife_crop.DWA45.0000002.exr  StillLife_crop.NONE.0000001.exr  StillLife_crop.NONE.0000002.exr
source/: sigma_compare.cpp
workflows/: windows_release.yml  windows_vcpkg_release.yml
